--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Crystal Collector</title>
 </head>
 <body>
@@ -32,7 +34,9 @@
     <img src="assets/images/aquamarine.png">
 </div>
 
-
+<div id="totalScore">
+    <p>Your current score is <span></span></p>
+</div>
 
 </body>
 </html>
