--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="assets/javascript/game.js"></script>
     <title>Crystal Collector</title>
 </head>
 <body>
@@ -28,20 +30,20 @@
 </div>
 
 <div id="winsLoses">
-    <p>Wins<span></span></p>
-    <p>Loses<span></span></p>
+    <p>Wins<span id="wins"></span></p>
+    <p>Loses<span id="loses"></span></p>
 </div>
 
 <div id="gemImages">
-    <img src="assets/images/amethyst.png">
-    <img src="assets/images/diamond.png">
-    <img src="assets/images/emerald.png">
-    <img src="assets/images/aquamarine.png">
+    <img id="purple" src="assets/images/amethyst.png">
+    <img id="white" src="assets/images/diamond.png">
+    <img id="green" src="assets/images/emerald.png">
+    <img id="blue" src="assets/images/aquamarine.png">
 </div>
 
 <div id="totalScore">
     <p>Your current score is</p>
-    <p><span></span></p>
+    <p><span id="currentScore"></span></p>
 </div>
 
 </body>
