made some style updates

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 
     <div id="goalScoreBox">
         <p>Goal Score</p>
-        <span id="goalScore"></span>
+        <p><span id="goalScore"></span></p>
     </div>
 
     <div id="winsLoses">
-        <p>Wins <span id="wins"></span></p>
-        <p>Loses <span id="loses"></span></p>
+        <p class="win-lose">Wins <span id="wins"></span></p>
+        <p class="win-lose">Loses <span id="loses"></span></p>
     </div>
 
     <div id="gemImages">
