--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <p><span id="goalScore"></span></p>
     </div>
 
-    <div id="winsLoses">
+    <div id="winsLosses">
         <p class="win-lose">Wins <span id="wins"></span></p>
-        <p class="win-lose">Loses <span id="loses"></span></p>
+        <p class="win-lose">Losses <span id="losses"></span></p>
     </div>
 
     <div id="gemImages">
